# YMEngine

./: .gitignore  .gitmodules  CMakeLists.txt  FmEngineApi.cpp  FmEngineApi.h  README.md  README_ymfm.md  WasapiOutput.h
src/: ExternalChip.h  FmChip.h  FmEngine.h  FmEngineApi.cpp  FmEngineApi.def  FmEngineApi.h  FmEngineApi.rc  WasapiOutput.h  main.cpp  test_patches.json
src/patches/: all.json  dcsg.json  opl.json  opl2.json  opl3.json  opl4.json  opll.json  opllp.json  opllx.json  opm.json  opn.json  opn2.json  opna.json  opnb.json  opnbb.json  opz.json  saa.json  scc.json  ssg.json  vrc7.json  y8950.json
